--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,42 @@
 name: sankey_diagram_survey
 channels:
+  - plotly
   - conda-forge
   - defaults
   - ak_93
   - ecrop
 dependencies:
-  - python=3.5
-prefix: /Users/voegtlil/miniconda3/envs/sankey_diagram_survey
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2020.6.20
+  - certifi=2020.6.20
+  - cffi=1.14.3
+  - chardet=3.0.4
+  - cryptography=3.1.1
+  - idna=2.10
+  - libcxx=10.0.1
+  - libedit=3.1.20191231
+  - libffi=3.2.1
+  - ncurses=6.2
+  - openssl=1.1.1h
+  - pip=20.2.3
+  - plotly=4.11.0
+  - psutil=5.7.2
+  - pycparser=2.20
+  - pyopenssl=19.1.0
+  - pysocks=1.7.1
+  - python=3.8.6
+  - python-kaleido=0.0.3
+  - python_abi=3.8
+  - readline=8.0
+  - requests=2.24.0
+  - retrying=1.3.3
+  - setuptools=49.6.0
+  - six=1.15.0
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - urllib3=1.25.10
+  - wheel=0.35.1
+  - xz=5.2.5
+  - zlib=1.2.11
+
